# pchemdb

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  LICENSE.txt  README.md  README.rst  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: 1-feature-request.yml  1-issue.yml
.github/workflows/: docs.yml  pages.yml  test.yml
docs/source/: conf.py  index.rst  requirements.txt
docs/source/reference/: modules.rst  pchemdb.rst
docs/sources/: index.md
src/pchemdb/: __about__.py  __init__.py  crc.py  utils.py
src/pchemdb/_database/: crc.json
src/pchemdb/crc/: conductivity.py
tests/: test_crc.py  test_utils.py
tests/crc/: Molar Electrical Conductivity of Aqueous HBr as a Function of Temperature and Concentration.csv  Molar Electrical Conductivity of Aqueous HCl as a Function of Temperature and Concentration.csv
tests/crc/molar_electrical_conductivity/: Molar Electrical Conductivity of Aqueous Hydro-Halogen Acids at 25C as a Function of Concentration.csv  Molar Electrical Conductivity of Electrolytes in Aqueous Solution at 25C as a Function of Concentration.csv
tests/test_crc/: Activity Coefficients of Acids, Bases, and Salts at 25C as a Function of Concentration Molality 0_1 m to 1_0 m - 1.csv  Activity Coefficients of Acids, Bases, and Salts at 25C as a Function of Concentration Molality 0_1 m to 1_0 m - 2.csv  Activity Coefficients of Acids, Bases, and Salts at 25C as a Function of Concentration Molality 2_0 m to 20 m - 1.csv  Activity Coefficients of Acids, Bases, and Salts at 25C as a Function of Concentration Molality 2_0 m to 20 m - 2.csv  Electrical Conductivity of Aqueous Solutions at 20C as a Function of Concentration.csv  Molar Electrical Conductivity of Aqueous HBr as a Function of Temperature and Concentration.csv  Molar Electrical Conductivity of Aqueous HCl as a Function of Temperature and Concentration.csv  Molar Electrical Conductivity of Aqueous Hydro-Halogen Acids at 25C as a Function of Concentration.csv  Molar Electrical Conductivity of Electrolytes in Aqueous Solution at 25C as a Function of Concentration.csv
